--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "tsparticles": "^1.31.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
